--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,19 @@
 {
-    "chat.agent.maxRequests": 100
+  // Auto-approbation globale (false pour utiliser la liste sélective ci-dessous)
+  "chat.tools.autoApprove": true,
+
+  // Nouvelle clé unifiée: commandes terminal auto-approuvées (remplace allowList / denyList dépréciées)
+  "chat.tools.terminal.autoApprove": [
+    "npm install",
+    "npm run ",
+    "pnpm install",
+    "yarn ",
+    "git status",
+    "/^docker compose (up|down)/"
+  ],
+  // Anciennes commandes sensibles qui nécessiteront toujours confirmation (documentation seulement)
+  // rm , mv , sudo , /^git (reset|clean)/
+  
+  // Limite de requêtes simultanées / en file pour l'agent
+  "chat.agent.maxRequests": 100
 }
