--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,16 @@
 
 # Build output
 /dist
+/dist-ssr
+*.tsbuildinfo
 
 # Environment variables
 .env
+.env.local
+.env.*.local
 
 # Logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -15,3 +20,14 @@ pnpm-debug.log*
 
 # Caches
 .eslintcache
+.vite/
+
+# IDE settings
+/.vscode/
+
+# OS-generated files
+.DS_Store
+Thumbs.db
+
+# Temporary directories
+/temp_onboarding
