--- a/package.json
+++ b/package.json
@@ -13,15 +13,14 @@
     "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/typography": "^0.5.16",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "@xenova/transformers": "^2.17.2",
+    "@xenova/transformers": "^2.17.1",
     "lucide-react": "^0.536.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.1",
-    "zustand": "^5.0.7",
-    "@xenova/transformers": "^2.17.1"
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
